починил все команды